# Robotics-RunJ

./: .gitignore  .gitmodules  JACO_FK  JACO_arm.ipynb  JACO_arm.py  Jacobian.ipynb  Kinematic.ipynb  README.md
HELIC_joint/esp32c3_uros_esp_idf/main/: CMakeLists.txt
HELIC_joint/swimming_exp/esp32s3_uros_esp_idf/main/: CMakeLists.txt  config.h  main.c
JACO arm/: JACO_arm.ipynb
OpenManipulator/: FK.py
PMP/: L0_PMP.py  PMP.py
bldc_driver/bldc_board_eagle/: Dual_Drive_4.b##  Dual_Drive_4.b#1
bldc_driver/bldc_board_easyeda/: bldc_board.eprj
bldc_driver/bldc_controller_stm32/: DualDrive.ioc  STM32G491KEUX_RAM.ld
bldc_driver/bldc_driver_board_easyeda/: bldc_driver_board_easyeda.eprj
bldc_driver/bldc_driver_easyeda_2/: bldc_driver_board_easyeda_2.eprj
bldc_driver/bldc_driver_easyeda_2_duplicated_drv8323/: bldc_driver_board_easyeda_2.eprj
bldc_driver/bldc_motor_cad/: 8108.SLDPRT
esp32_project/esp-idf/esp32s3_uros_esp_idf/main/: CMakeLists.txt  config.h  main.c  micro_ros_setup.h
microros_esp32c6/controller_module/: CMakeLists.txt
microros_esp32c6/esp_ws_delta_swerve_v2/: platformio.ini
path_adaptation/: path_adaptation_exo_h3.ipynb
path_adaptation/cpg_rbfn/: cpg_afdc.py  cpg_one_cycle.npz  cpg_rbf.py  created_setpoint.npz  plastic.py  rbf.py
path_adaptation/gait_cycle_cut/: gait_cycle_cut.py
path_adaptation/lower_limb_exo/: left_hip_angle.csv
path_adaptation/scene/: empty_scene.xml
robot_arm/: Jacobian.ipynb
robot_arm/open_manipulator/: FK.ipynb
spiral_compliance_joint/: scj.py
spiral_compliance_joint/WirelessInsole/: platformio.ini
(+517 files in other folders)
